--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- nurodome koki js faila naudosim -->
-    <script src="./js/kintamieji.js" defer></script>
+    <!-- <script src="./js/kintamieji.js" defer></script> -->
+    <script src="./js/operatoriai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
