--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- nurodome koki js faila naudosim -->
     <!-- <script src="./js/kintamieji.js" defer></script> -->
-    <script src="./js/operatoriai.js" defer></script>
+    <!-- <script src="./js/operatoriai.js" defer></script> -->
+    <script src="./js/test.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
