tipai iki string

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- nurodome koki js faila naudosim -->
     <!-- <script src="./js/kintamieji.js" defer></script> -->
     <!-- <script src="./js/operatoriai.js" defer></script> -->
-    <script src="./js/test.js" defer></script>
+    <!-- <script src="./js/test.js" defer></script> -->
+    <script src="./js/tipai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
