--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- <script src="./js/kintamieji.js" defer></script> -->
     <!-- <script src="./js/operatoriai.js" defer></script> -->
     <!-- <script src="./js/test.js" defer></script> -->
-    <script src="./js/tipai.js" defer></script>
+    <!-- <script src="./js/tipai.js" defer></script> -->
+    <script src="./js/masyvai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
