scope, obj start

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="./js/tipai.js" defer></script> -->
     <!-- <script src="./js/masyvai.js" defer></script> -->
     <!-- <script src="./js/masyvuMetodai.js" defer></script> -->
-    <script src="./js/functions.js" defer></script>
+    <!-- <script src="./js/functions.js" defer></script> -->
+    <script src="./js/scope.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
