--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- <script src="./js/masyvuMetodai.js" defer></script> -->
     <!-- <script src="./js/functions.js" defer></script> -->
     <!-- <script src="./js/scope.js" defer></script> -->
-    <script src="./js/objektai.js" defer></script>
+    <!-- <script src="./js/objektai.js" defer></script> -->
+    <script src="./js/ciklai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
