for ciklas generuoja li elementus

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <h1>Js1</h1>
+    <div id="app"></div>
 
     <!-- galima ikelti js html faile body dalyje -->
     <!-- <script>
