--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- <script src="./js/functions.js" defer></script> -->
     <!-- <script src="./js/scope.js" defer></script> -->
     <!-- <script src="./js/objektai.js" defer></script> -->
-    <script src="./js/ciklai.js" defer></script>
+    <!-- <script src="./js/ciklai.js" defer></script> -->
+    <script src="./js/ciklaiMasyvai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
