--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="./js/scope.js" defer></script> -->
     <!-- <script src="./js/objektai.js" defer></script> -->
     <!-- <script src="./js/ciklai.js" defer></script> -->
-    <script src="./js/ciklaiMasyvai.js" defer></script>
+    <!-- <script src="./js/ciklaiMasyvai.js" defer></script> -->
+    <script src="./js/cikluUzdaviniai2.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
