uzduotis su array obj

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- <script src="./js/objektai.js" defer></script> -->
     <!-- <script src="./js/ciklai.js" defer></script> -->
     <!-- <script src="./js/ciklaiMasyvai.js" defer></script> -->
-    <script src="./js/cikluUzdaviniai2.js" defer></script>
+    <!-- <script src="./js/cikluUzdaviniai2.js" defer></script> -->
+    <script src="./js/masyvuObjektai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
