--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="./js/ciklai.js" defer></script> -->
     <!-- <script src="./js/ciklaiMasyvai.js" defer></script> -->
     <!-- <script src="./js/cikluUzdaviniai2.js" defer></script> -->
-    <script src="./js/masyvuObjektai.js" defer></script>
+    <!-- <script src="./js/masyvuObjektai.js" defer></script> -->
+    <script src="./js/pratimai1.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
