--- a/index.html
+++ b/index.html
@@ -5,20 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- nurodome koki js faila naudosim -->
-    <!-- <script src="./js/kintamieji.js" defer></script> -->
-    <!-- <script src="./js/operatoriai.js" defer></script> -->
-    <!-- <script src="./js/test.js" defer></script> -->
-    <!-- <script src="./js/tipai.js" defer></script> -->
-    <!-- <script src="./js/masyvai.js" defer></script> -->
-    <!-- <script src="./js/masyvuMetodai.js" defer></script> -->
-    <!-- <script src="./js/functions.js" defer></script> -->
-    <!-- <script src="./js/scope.js" defer></script> -->
-    <!-- <script src="./js/objektai.js" defer></script> -->
-    <!-- <script src="./js/ciklai.js" defer></script> -->
-    <!-- <script src="./js/ciklaiMasyvai.js" defer></script> -->
-    <!-- <script src="./js/cikluUzdaviniai2.js" defer></script> -->
-    <!-- <script src="./js/masyvuObjektai.js" defer></script> -->
-    <script src="./js/pratimai1.js" defer></script>
+
+    <!-- <script src="./js/pratimai1.js" defer></script> -->
+    <script src="./js/masyvuObjektai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
