--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- nurodome koki js faila naudosim -->
 
-    <!-- <script src="./js/pratimai1.js" defer></script> -->
-    <script src="./js/masyvuObjektai.js" defer></script>
+    <script src="./js/pratimai1.js" defer></script>
+    <!-- <script src="./js/masyvuObjektai.js" defer></script> -->
     <title>Js1</title>
   </head>
   <body>
