pradejo array of objects

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <!-- nurodome koki js faila naudosim -->
 
     <!-- <script src="./js/pratimai1.js" defer></script> -->
-    <script src="./js/pratimai2.js" defer></script>
+    <!-- <script src="./js/pratimai2.js" defer></script> -->
     <!-- <script src="./js/masyvuObjektai.js" defer></script> -->
+    <script src="./js/papildomiObjektuMasyvai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
