--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <!-- <script src="./js/pratimai1.js" defer></script> -->
     <!-- <script src="./js/pratimai2.js" defer></script> -->
     <!-- <script src="./js/masyvuObjektai.js" defer></script> -->
-    <script src="./js/papildomiObjektuMasyvai.js" defer></script>
+    <!-- <script src="./js/papildomiObjektuMasyvai.js" defer></script> -->
+    <script src="./js/salyginiaiSakiniai.js" defer></script>
     <title>Js1</title>
   </head>
   <body>
     <h1>Js1</h1>
     <div id="app"></div>
-
     <!-- galima ikelti js html faile body dalyje -->
     <!-- <script>
       // cia veeikia js
