salyginiai su funkcijom

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <!-- <script src="./js/pratimai2.js" defer></script> -->
     <!-- <script src="./js/masyvuObjektai.js" defer></script> -->
     <!-- <script src="./js/papildomiObjektuMasyvai.js" defer></script> -->
-    <script src="./js/salyginiaiSakiniai.js" defer></script>
-    <title>Js1</title>
+    <!-- <script src="./js/salyginiaiSakiniai.js" defer></script> -->
+    <script src="./js/salyginiaiSakSuFunkcijom.js" defer></script>
+    <title>Week 6 Day 1</title>
   </head>
   <body>
-    <h1>Js1</h1>
+    <h1>Week 6 Day 1 Open Console to continue</h1>
     <div id="app"></div>
     <!-- galima ikelti js html faile body dalyje -->
     <!-- <script>
