--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="./js/masyvuObjektai.js" defer></script> -->
     <!-- <script src="./js/papildomiObjektuMasyvai.js" defer></script> -->
     <!-- <script src="./js/salyginiaiSakiniai.js" defer></script> -->
-    <script src="./js/salyginiaiSakSuFunkcijom.js" defer></script>
+    <!-- <script src="./js/salyginiaiSakSuFunkcijom.js" defer></script> -->
+    <script src="./js/tasks.js" defer></script>
     <title>Week 6 Day 1</title>
   </head>
   <body>
