--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="./js/salyginiaiSakiniai.js" defer></script> -->
     <!-- <script src="./js/salyginiaiSakSuFunkcijom.js" defer></script> -->
     <script src="./js/tasks.js" defer></script>
+    <script src="./js/callback.js" defer></script>
     <title>Week 6 Day 1</title>
   </head>
   <body>
